fix: anchor links

--- a/src/content/docs/de/guides/styling.mdx
+++ b/src/content/docs/de/guides/styling.mdx
@@ -155,13 +155,13 @@ Es gibt zwei Möglichkeiten, externe globale Stile aufzulösen: ein ESM-Import f
 
 📚 Lies mehr über die Verwendung von [statischen Assets](/de/guides/imports/), die sich in `public/` oder `src/` befinden.
 
-### Importiere ein lokales CSS
+### Importiere ein lokales Stylesheet
 
 :::caution[Verwendest du ein npm-Paket?]
-Möglicherweise musst du deine `astro.config` aktualisieren, wenn du aus npm-Paketen importierst. Siehe den Abschnitt ["CSS aus einem npm-Paket importieren"](#import-a-stylesheet-from-an-npm-package) unten.
+Möglicherweise musst du deine `astro.config` aktualisieren, wenn du aus npm-Paketen importierst. Siehe den Abschnitt ["CSS aus einem npm-Paket importieren"](#importiere-css-aus-einem-npm-paket) unten.
 :::
 
-Du kannst CSS mit der ESM-Import-Syntax in dein Astro-Komponenten-Frontmatter importieren. CSS-Importe funktionieren wie [jeder andere ESM-Import in einer Astro-Komponente](/de/core-concepts/astro-components/#the-component-script), der als **relativ zur Komponente** referenziert werden sollte und mit allen anderen Importen am **Beginn** deines Komponentenskripts geschrieben werden muss.
+Du kannst CSS mit der ESM-Import-Syntax in dein Astro-Komponenten-Frontmatter importieren. CSS-Importe funktionieren wie [jeder andere ESM-Import in einer Astro-Komponente](/de/core-concepts/astro-components/#das-komponentenskript), der als **relativ zur Komponente** referenziert werden sollte und mit allen anderen Importen am **Beginn** deines Komponentenskripts geschrieben werden muss.
 
 ```astro title="src/pages/index.astro" {4}
 ---
@@ -231,7 +231,7 @@ Du kannst auch das Element `<link>` verwenden, um CSS auf der Seite zu laden. Di
 </head>
 ```
 
-Da diese Methode das Verzeichnis `public/` verwendet, überspringt sie die normale CSS-Verarbeitung, Bündelung und Optimierung, die Astro bietet. Wenn du diese Umwandlungen benötigst, verwende die oben beschriebene Methode [Importiere CSS](#import-a-local-stylesheet).
+Da diese Methode das Verzeichnis `public/` verwendet, überspringt sie die normale CSS-Verarbeitung, Bündelung und Optimierung, die Astro bietet. Wenn du diese Umwandlungen benötigst, verwende die oben beschriebene Methode [Importiere CSS](#importiere-ein-lokales-stylesheet).
 
 ## Kaskadierende Ordnung
 
@@ -377,7 +377,7 @@ Ein gängiges Pattern in Astro ist der Import von globalem CSS innerhalb einer [
 :::
 
 ### Link-Tags
-Stile, die über [Link-Tags](#load-a-static-stylesheet-via-link-tags) geladen werden, werden in der Reihenfolge vor allen anderen Stilen in einer Astro-Datei ausgewertet. Daher haben diese Stile einen geringeren Vorrang als importierte Stylesheets und Scoped Styles:
+Stile, die über [Link-Tags](#laden-eines-statischen-stylesheets-über-link-tags) geladen werden, werden in der Reihenfolge vor allen anderen Stilen in einer Astro-Datei ausgewertet. Daher haben diese Stile einen geringeren Vorrang als importierte Stylesheets und Scoped Styles:
 
 ```astro title="index.astro"
 ---
@@ -482,9 +482,9 @@ Svelte in Astro funktioniert auch genau wie erwartet: [Svelte Styling Docs][svel
 
 ## Markdown-Styling
 
-Alle Astro-Stylingmethoden sind für eine [Markdown-Layoutkomponente](/de/core-concepts/layouts/#markdownmdx-layouts) verfügbar.
+Alle Astro-Stylingmethoden sind für eine [Markdown-Layoutkomponente](/de/core-concepts/layouts/#markdown-layouts) verfügbar.
 
-Du kannst globale Stile auf deinen Markdown-Inhalt anwenden, indem du [`<style>`-Tags](#global-styles) und [importierte Stylesheets](#external-styles) in das Layout einfügst, das deinen Seiteninhalt umhüllt. Du kannst auch [CSS-Integrationen](#css-integrations) einschließlich [Tailwind](/de/guides/integrations-guide/tailwind/) hinzufügen.
+Du kannst globale Stile auf deinen Markdown-Inhalt anwenden, indem du [`<style>`-Tags](#globale-stile) und [importierte Stylesheets](#externe-stile) in das Layout einfügst, das deinen Seiteninhalt umhüllt. Du kannst auch [CSS-Integrationen](#css-integrationen) einschließlich [Tailwind](/de/guides/integrations-guide/tailwind/) hinzufügen.
 
 Wenn du Tailwind verwendest, kann das [Typografie-Plugin] (https://tailwindcss.com/docs/typography-plugin) für das Styling von Markdown nützlich sein.
 
