--- a/src/content/docs/en/guides/typescript.mdx
+++ b/src/content/docs/en/guides/typescript.mdx
@@ -4,7 +4,7 @@ description: Learn how to use Astro's built-in TypeScript support.
 i18nReady: true
 ---
 import Since from '~/components/Since.astro'
-
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
 Astro ships with built-in support for [TypeScript](https://www.typescriptlang.org/). You can import `.ts` and `.tsx` files in your Astro project, write TypeScript code directly inside your [Astro component](/en/core-concepts/astro-components/#the-component-script), and even use an [`astro.config.ts`](/en/guides/configuring-astro/#the-astro-config-file) file if you like.
