--- a/src/content/docs/zh-cn/reference/integrations-reference.mdx
+++ b/src/content/docs/zh-cn/reference/integrations-reference.mdx
@@ -32,7 +32,7 @@ interface AstroIntegration {
     'astro:server:setup'?: (options: { server: vite.ViteDevServer }) => void | Promise<void>;
     'astro:server:start'?: (options: { address: AddressInfo }) => void | Promise<void>;
     'astro:server:done'?: () => void | Promise<void>;
-    'astro:build:start'?: (options: { buildConfig: BuildConfig }) => void | Promise<void>;
+    'astro:build:start'?: () => void | Promise<void>;
     'astro:build:setup'?: (options: {
       vite: ViteConfigWithSSR;
       pages: Map<string, PageBuildData>;
@@ -272,7 +272,7 @@ export default {
 **用途**：设置生产构建过程中需要的任何全局对象或客户端。这也可以扩展[适配器 API](/zh-cn/reference/adapter-reference/)中的构建配置选项。
 
 ```js
-'astro:build:start'?: (options: { buildConfig: BuildConfig }) => void | Promise<void>;
+'astro:build:start'?: () => void | Promise<void>;
 ```
 
 ### `astro:build:setup`
