Apply suggestions from code review
Co-authored-by: Dan Jutan <danjutan@gmail.com>

--- a/src/content/docs/en/guides/typescript.mdx
+++ b/src/content/docs/en/guides/typescript.mdx
@@ -34,7 +34,7 @@ Additionally, our templates include an `env.d.ts` file inside the `src` folder t
 /// <reference types="astro/client" />
 ```
 
-If you are not using VSCode, it is also advisable to [install the typescript plugin from npm](https://www.npmjs.com/package/@astrojs/ts-plugin):
+If you are not using VSCode, you can install the [Astro TypeScript plugin]((https://www.npmjs.com/package/@astrojs/ts-plugin) to support importing `.astro` files from `.ts` files (which can be useful for re-exporting). 
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -54,7 +54,7 @@ If you are not using VSCode, it is also advisable to [install the typescript plu
   </Fragment>
 </PackageManagerTabs>
 
-Once you have done this, add the following to your `tsconfig.json`:
+Then, add the following to your `tsconfig.json`:
 
 ```json title="tsconfig.json"
   "compilerOptions": {
@@ -66,7 +66,7 @@ Once you have done this, add the following to your `tsconfig.json`:
     "jsx": "react",
 ```
 
-The plugin should now be working. To check, create a ts file and import an astro component into it. You should have no warning messages from your editor saying the import cannot be found.
+To check that the plugin is working, create a `.ts` file and import an Astro component into it. You should have no warning messages from your editor.
 
 ### UI Frameworks
 
