--- a/src/content/docs/en/guides/typescript.mdx
+++ b/src/content/docs/en/guides/typescript.mdx
@@ -183,7 +183,7 @@ type MyAttributes = astroHTML.JSX.ImgHTMLAttributes;
 
 <Since v="2.1.0" />
 
-Astro includes helpers for working with the types returned in your [getStaticPaths()](/en/reference/api-reference/#getstaticpaths) export for dynamic pages.
+Astro includes helpers for working with the types returned by your [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths) function for dynamic routes.
 
 To get the type of [params](/en/reference/api-reference/#params) you can do the following:
 
