--- a/src/content/docs/en/guides/typescript.mdx
+++ b/src/content/docs/en/guides/typescript.mdx
@@ -179,7 +179,7 @@ type MyAttributes = astroHTML.JSX.ImgHTMLAttributes;
 ```
 :::
 
-### getStaticPaths
+### Infer `getStaticPaths()` types
 
 <Since v="2.1.0" />
 
