--- a/src/content/docs/en/guides/typescript.mdx
+++ b/src/content/docs/en/guides/typescript.mdx
@@ -185,47 +185,29 @@ type MyAttributes = astroHTML.JSX.ImgHTMLAttributes;
 
 Astro includes helpers for working with the types returned by your [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths) function for dynamic routes.
 
-To get the type of [params](/en/reference/api-reference/#params) you can do the following:
+You can get the type of [`Astro.params`](/en/reference/api-reference/#astroparams) with `InferGetStaticParamsType` and the type of [`Astro.props`](/en/reference/api-reference/#astroprops) with `InferGetStaticPropsType`:
 
-```astro title="src/pages/posts[...slug].astro" "@components" "@layouts"
+```astro title="src/pages/posts/[...slug].astro" {2,14-15}
 ---
-import { InferGetStaticParamsType } from 'astro';
+import { InferGetStaticParamsType, InferGetStaticPropsType } from 'astro';
 
 export async function getStaticPaths() {
-  const results = await fetchPosts();
-  return results.map(entry => {
+  const posts = await getCollection('blog');
+  return posts.map((post) => {
     return {
-      params: { slug: entry.slug },
-    }
+      params: { slug: post.slug },
+      props: { draft: post.data.draft, title: post.data.title },
+    };
   });
 }
 
 type Params = InferGetStaticParamsType<typeof getStaticPaths>;
-//   ^? { slug: string; }
----
-```
-
-Likewise, to get the [props](/en/reference/api-reference/#astroprops) for the page, use the `InferGetStaticPropsType` type function:
-
-```astro title="src/pages/posts[...slug].astro" "@components" "@layouts"
----
-import { InferGetStaticPropsType } from 'astro';
-
-export async function getStaticPaths() {
-  const results = await fetchPosts();
-  return results.map(entry => {
-    return {
-      params: { slug: entry.slug },
-      props: {
-        propA: true,
-        propB: 22
-      }
-    }
-  });
-}
-
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
-// ^? { propA: boolean; propB: number; }
+
+const { slug } = Astro.params;
+//               ^? { slug: string; }
+const { title } = Astro.props;
+//                ^? { draft: boolean; title: string; }
 ---
 ```
 
