feat(assets): Add JS API and additional properties mention

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -139,22 +139,75 @@ import myImage from "../assets/my_image.png"; // Image is 1600x900
 
 ### Properties
 
-### width and height
+#### width and height
 
 These properties are used to size the image while ensuring there will be no CLS. These properties are required for remote images. When using local images, the `width` and `height` can be automatically inferred from the source file.
 
-### format
+#### format
 
 `format` is used to set the [image file type](https://developer.mozilla.org/en-US/docs/Web/Media/Formats/Image_types#common_image_file_types). This property is optional, but the default is `webp`.
 
-### quality
+#### quality
 
 `quality` affects the image transformation quality. It can either be a preset from `low`, `medium`, `high`, `max` or a number from `0` to `100`. This property is optional.
 
-### alt
+#### alt
 
-Not all users can see images in the same way, so accessibility is an especially important concern when using images. Use the `alt` attribute to provide [descriptive alt text](https://www.w3.org/WAI/tutorials/images/) for images. 
+Not all users can see images in the same way, so accessibility is an especially important concern when using images. Use the `alt` attribute to provide [descriptive alt text](https://www.w3.org/WAI/tutorials/images/) for images.
 
 This attribute is required for the `<Image />` component. This component will throw an error if no alt text is provided.
 
 If the image is merely decorative (i.e. doesn't contribute to the understanding of the page), set `alt=""` so that screen readers know to ignore the image.
+
+#### Additional properties
+
+In addition to the properties listed previously, the Image component accept all the properties accepted by the HTML `img` tag. You can use this for example, to provide a `class` to the final `img` element.
+
+```astro
+---
+import { Image } from 'astro:assets';
+import myImage from "../assets/my_image.png";
+---
+
+<!-- `alt` is mandatory on the Image component -->
+<Image src={myImage} alt="..." class="my-class" />
+```
+
+```astro
+<!-- Output -->
+<img
+  src="/_astro/my_image.hash.webp"
+  width="1600"
+  height="900"
+  decoding="async"
+  loading="lazy"
+  class="my-class"
+/>
+```
+
+### JavaScript API
+
+In addition to the component, a `getImage` function is provided. This function is intended for generating images destined to be used somewhere else than directly in HTML, such as for usage in CSS or in an [API Route](/en/core-concepts/endpoints/#server-endpoints-api-routes).
+
+This function takes the same parameters as the Image component, apart from `alt`.
+
+```astro
+---
+import { getImage } from "astro:assets";
+import myBackground from "../background.png"
+
+const optimizedBackground = await getImage({src: myBackground, format: 'avif'})
+---
+
+<div style={`background-image: url(${optimizedBackground.src});`}></div>
+```
+
+It returns an objet with the following properties:
+
+```js
+{
+  options: {...} // Original parameters passed,
+  src: "https//..." // Path to the generate image,
+  attributes: {...} // Additional HTML attributes needed to render the image (width, height, style, etc..)
+}
+```
