--- a/src/content/docs/en/tutorial/1-setup/2.mdx
+++ b/src/content/docs/en/tutorial/1-setup/2.mdx
@@ -57,11 +57,11 @@ The preferred way to create a new Astro site is through our `create astro` setup
 
 4. You will see a short list of starter templates to choose from. Use the arrow keys (up and down) to navigate to the "Empty" template, and then press return (enter) to submit your choice. 
 
-5. When the prompt asks, "Would you like to install dependencies?" type `y`.
+5. When the prompt asks, "Would you like to install dependencies?" Use the arrow keys (left and right) to navigate to "Yes", and then press return (enter) to submit your choice.
 
-6. When the prompt asks you if you plan on writing TypeScript, type `n`. 
+6. When the prompt asks you if you plan on writing TypeScript, Use the arrow keys (left and right) to navigate to "No", and then press return (enter) to submit your choice. 
 
-7. When the prompt asks, "Would you like to initialize a new git repository?" type `y`.
+7. When the prompt asks, "Would you like to initialize a new git repository?" Use the arrow keys (left and right) to navigate to "Yes", and then press return (enter) to submit your choice.
 
 When the install wizard is complete, you no longer need this terminal. You can now open VS Code to continue.
 
