--- a/src/content/docs/pl/install/auto.mdx
+++ b/src/content/docs/pl/install/auto.mdx
@@ -52,7 +52,7 @@ Uruchom następujące polecenie w swoim terminalu, aby uruchomić nasz kreator i
 
 Możesz uruchomić `create astro` w dowolnym miejscu na swoim komputerze, więc nie ma potrzeby tworzenia nowego pustego katalogu dla twojego projektu przed rozpoczęciem. Jeśli nie masz jeszcze pustego katalogu dla swojego nowego projektu, kreator pomoże Ci go automatycznie utworzyć.
 
-Jeśli wszystko pójdzie dobrze, powinieneś zobaczyć komunikat "Gotowy do startu!", po którym następują zalecane "Następne kroki". Przejdź do katalogu z nowym projektem, aby rozpocząć korzystanie z Astro. 
+Jeśli wszystko pójdzie dobrze, powinieneś zobaczyć komunikat "Liftoff confirmed. Explore your project!" ("Start został potwierdzony. Zacznij odkrywać swój projekt!"), po którym następują zalecane następne kroki. Przejdź do katalogu z nowym projektem, aby rozpocząć korzystanie z Astro. 
 
 Jeśli pominąłeś krok `npm install` podczas kreatora CLI, upewnij się, że zainstalowałeś odpowiednie pakiety przed kontynuowaniem.
 
