--- a/src/content/docs/en/recipes/build-forms.mdx
+++ b/src/content/docs/en/recipes/build-forms.mdx
@@ -1,15 +1,15 @@
 ---
-title: Build 0JS Forms With Astro Pages
+title: Build HTML Forms in Astro Pages
 description: Learn how to build HTML forms and handle submissions in your frontmatter
 i18nReady: false
 type: recipe
 ---
 
-In SSR mode, Astro pages can both display and handle forms. In this recipe, you'll use a standard HTML form to submit data to the server, where you'll handle the data in your frontmatter script.
+In SSR mode, Astro pages can both display and handle forms. In this recipe, you'll use a standard HTML form to submit data to the server. Your frontmatter script will handle the data on the server, sending no JavaScript to the client.
 
 ## Recipe
 
-1. Create or identify a `.astro` page which will contain your form and your handling code. For example, you could add a feedback page:
+1. Create or identify a `.astro` page which will contain your form and your handling code. For example, you could add a registration page:
 
     ```astro title="src/pages/register.astro"
     ---
@@ -17,7 +17,9 @@ In SSR mode, Astro pages can both display and handle forms. In this recipe, you'
     <h1>Register</h1>
     ```
 
-2. Add a `<form>` tag with some inputs to the page. Each input should have a `name` attribute that describes the value of that input. Be sure to add a `<button>` or `<input type="submit">` element to submit the form.
+2. Add a `<form>` tag with some inputs to the page. Each input should have a `name` attribute that describes the value of that input. 
+
+    Be sure to include a `<button>` or `<input type="submit">` element to submit the form.
 
     ```astro title="src/pages/register.astro"
     ---
@@ -40,7 +42,12 @@ In SSR mode, Astro pages can both display and handle forms. In this recipe, you'
     </form>
     ```
 
-3. Use [validation attributes](https://developer.mozilla.org/en-US/docs/Learn/Forms/Form_validation#using_built-in_form_validation) to provide basic client-side validation that works even if JavaScript is disabled. Here, `required` prevents form submission until the field is filled, and `minlength` sets a minimum required length for the input text. `type="email"` also introduces validation that will only accept a valid email format.
+3. Use [validation attributes](https://developer.mozilla.org/en-US/docs/Learn/Forms/Form_validation#using_built-in_form_validation) to provide basic client-side validation that works even if JavaScript is disabled. 
+
+    In this example,
+    - `required` prevents form submission until the field is filled. 
+    - `minlength` sets a minimum required length for the input text.
+    - `type="email"` also introduces validation that will only accept a valid email format.
 
     ```astro title="src/pages/register.astro"
     ---
@@ -49,7 +56,7 @@ In SSR mode, Astro pages can both display and handle forms. In this recipe, you'
     <form>
       <label>
         Username:
-        <input type="text" name="username" required minlength="3" />
+        <input type="text" name="username" required />
       </label>
       <label>
         Email:
@@ -69,16 +76,16 @@ In SSR mode, Astro pages can both display and handle forms. In this recipe, you'
     To write complex validation logic more easily, you can build your form using a [frontend framework](/en/core-concepts/framework-components/) and choose a form library like [React Hook Form](https://react-hook-form.com/) or [Felte](https://felte.dev/).
     :::
 
-4. By default, a form sends its data using the `GET` [HTTP method](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods), meaning it will use URL query parameters to transfer the data. This should only be used in the rare case that [the form has no side effects](https://developer.mozilla.org/en-US/docs/Glossary/Idempotent). Change the method to `POST` by setting the `method` on the form.
+4. Change the form's default data transfer `method` to `POST` to... or to avoid....(link this to what happens when submitting) The form submission will cause the browser to request the page again, with the form data stored in the [`Request` body](/en/reference/api-reference/#astrorequest).
 
-    ```astro title="src/pages/register.astro"
+    ```astro title="src/pages/register.astro" 'method="POST"'
     ---
     ---
     <h1>Register</h1>
     <form method="POST">
       <label>
         Username:
-        <input type="text" name="username" required minlength="3" />
+        <input type="text" name="username" required />
       </label>
       <label>
         Email:
@@ -92,11 +99,9 @@ In SSR mode, Astro pages can both display and handle forms. In this recipe, you'
     </form>
     ```
 
-5. The form submission will cause the browser to request the page again, with the form data stored in the [`Request` body](/en/reference/api-reference/#astrorequest). 
+5.  Check for the `POST` method in the frontmatter and access the form data using `Astro.request.formData()`. Wrap this in a `try ... catch` block to handle cases when the `POST` request wasn't sent by a form and the ``formData is invalid.
 
-    Check for the `POST` method in the frontmatter and access the form data using `Astro.request.formData()`. Wrap this in a `try ... catch` block to handle cases when the `POST` request wasn't sent by a form and the formData is invalid.
-
-    ```astro title="src/pages/feedback.astro" ins={2-14}
+    ```astro title="src/pages/register.astro" ins={2-14} "Astro.request.formData()"
     ---
     if (Astro.request.method === "POST") {
       try {
@@ -116,7 +121,7 @@ In SSR mode, Astro pages can both display and handle forms. In this recipe, you'
     <form method="POST">
       <label>
         Username:
-        <input type="text" name="username" required minlength="3" />
+        <input type="text" name="username" required />
       </label>
       <label>
         Email:
@@ -132,11 +137,11 @@ In SSR mode, Astro pages can both display and handle forms. In this recipe, you'
 
 5. Validate the form data on the server. This should include the same validation done on the client to prevent malicious submissions to your endpoint and to support the rare legacy browser that doesn't have form validation. 
 
-    It can also include validation that can't be done on the client—this example checks if the email is already in the database. 
+    It can also include validation that can't be done on the client. For example, this example checks if the email is already in the database. 
 
     Error messages can be sent back to the client by storing them in an `errors` object and accessing it in the template. 
 
-    ```astro title="src/pages/feedback.astro" ins={5, 12-22, 40, 45, 50}
+    ```astro title="src/pages/register.astro" ins={5, 12-22, 40, 45, 50}
     ---
     import { isRegistered, registerUser } from "../../data/users"
     import { isValidEmail } from "../../utils/isValidEmail";
@@ -148,8 +153,8 @@ In SSR mode, Astro pages can both display and handle forms. In this recipe, you'
         const name = data.get("username");
         const email = data.get("email");
         const password = data.get("password");
-        if (typeof name !== "string" || name.length < 3) {
-          errors.username += "Name must be at least 3 characters. ";
+        if (typeof name !== "string" || name.length < 1) {
+          errors.username += "Please enter a username. ";
         }
         if (typeof email !== "string" || !isValidEmail(email)) {
           errors.email += "Email is not valid. ";
@@ -171,10 +176,10 @@ In SSR mode, Astro pages can both display and handle forms. In this recipe, you'
     }
     ---
     <h1>Register</h1>
-    <form method="POST" class="flex flex-col">
+    <form method="POST">
       <label>
         Username:
-        <input type="text" name="username" required minlength="3" />
+        <input type="text" name="username" />
       </label>
       {errors.username && <p>{errors.username}</p>}
       <label>
