Apply suggestions from code review
Co-authored-by: Dan Jutan <danjutan@gmail.com>
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -74,7 +74,7 @@ Remote images are also valid, but are not automatically optimized by Astro's bui
 
 <!-- Local image stored at src/assets/stars.png -->
 ![A starry night sky.](../../assets/stars.png)
-<img src="/_assets/stars.hash.png" alt="A starry night sky.">
+<img src="/_astro/stars.hash.png" alt="A starry night sky.">
 
 <!-- Remote image on another server -->
 ![Astro](https://astro.build/assets/logo.png)
@@ -111,7 +111,7 @@ Enabling asset support allows you to access the `astro:assets` module. This modu
 The `<Image>` component generates an `<img>` tag with all the necessary attributes needed to display the image while avoiding Content Layout Shift **(CLS)**.
 
 :::tip[What is Content Layout Shift?]
-CLS is a score that reflects how much content shifted on your page during loading. The ideal number for CLS is as close to zero as possible.
+CLS is a score that reflects how much content shifted on your page during loading. The ideal number for CLS is as close to zero as possible, which the `Image` component enforces by automatically selecting the correct `width` and `height` for local images.
 :::
 
 ```astro
@@ -149,7 +149,7 @@ These properties are used to size the image while ensuring there will be no CLS.
 
 #### quality
 
-`quality` affects the image transformation quality. It can either be a preset from `low`, `medium`, `high`, `max` or a number from `0` to `100`. This property is optional.
+`quality` affects the image transformation quality. It can either be a preset from `low`, `medium`, `high`, `max` (automatically normalized between formats) or a number from `0` to `100` (interpreted differently between formats.) This property is optional.
 
 #### alt
 
@@ -161,7 +161,7 @@ If the image is merely decorative (i.e. doesn't contribute to the understanding 
 
 #### Additional properties
 
-In addition to the properties listed previously, the Image component accept all the properties accepted by the HTML `img` tag. You can use this for example, to provide a `class` to the final `img` element.
+In addition to the properties listed previously, the Image component accepts all the properties accepted by the HTML `img` tag. You can use this, for example, to provide a `class` to the final `img` element.
 
 ```astro
 ---
