--- a/src/content/docs/en/guides/images.mdx
+++ b/src/content/docs/en/guides/images.mdx
@@ -9,7 +9,7 @@ import Since from '~/components/Since.astro';
 Astro provides several ways for you to use images on your site, whether they are stored locally inside your project, linked to remotely, or stored in a CMS or CDN!
 
 :::caution[Consider trying Assets (Experimental)]
-_Experimental_ asset support was added in `astro@2.1.0`. Consider following the [Assets (Experimental)](/en/guides/assets) guide for a smoother experience with Image assets.
+_Experimental_ asset support was added in `astro@2.1.0`. Consider following the [Assets (Experimental)](/en/guides/assets/) guide for a smoother experience with Image assets.
 :::
 
 ### In `.astro` files
