--- a/src/content/docs/en/reference/image-service-reference.mdx
+++ b/src/content/docs/en/reference/image-service-reference.mdx
@@ -3,7 +3,11 @@ title: Image Service API
 i18nReady: false
 ---
 
-Astro [Assets](/en/guides/assets) were designed to make it easy for any image optimization service to build a service on top of Astro.
+Astro [Assets](/en/guides/assets/) were designed to make it easy for any image optimization service to build a service on top of Astro.
+
+::::caution
+The Image Services API is an _experimental_ Astro feature introduced in v2.1. Be mindful that the API is subject to change before it is marked as stable.
+:::
 
 Two types of services exists: Local and External.
 
