Apply suggestions from code review
Co-authored-by: Dan Jutan <danjutan@gmail.com>

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -6,7 +6,7 @@ i18nReady: false
 
 **Built-in Asset Support** is enabled in Astro behind an experimental flag. This built-in feature is intended to replace the optional `@astrojs/image` integration. The new assets experience features:
 
-- Brand new, more intuitive `Image` component
+- A new built-in `Image` component
 - Automatic image optimization in Markdown and MDX files
 - Integration with [Content Collections](/en/guides/content-collections/)
 - Improved error messages and types
