--- a/src/content/docs/zh-cn/guides/deploy/cloudflare.mdx
+++ b/src/content/docs/zh-cn/guides/deploy/cloudflare.mdx
@@ -111,7 +111,7 @@ npx astro add cloudflare
 
 [Pages Functions](https://developers.cloudflare.com/pages/platform/functions/)使您能够运行服务器端代码以启用动态功能，而无需运行专用服务器。
 
-首先，在你项目的梗目录下创建一个 `/functions` 目录。在此目录中编写的 Functions 文件会自动在预先指定的目录上生成具有自定义功能的 Worker。要了解有关编写函数的更多信息，请参阅 [Pages Functions 文档](https://developers.cloudflare.com/pages/platform/functions/)。
+首先，在你项目的根目录下创建一个 `/functions` 目录。在此目录中编写的 Functions 文件会自动在预先指定的目录上生成具有自定义功能的 Worker。要了解有关编写函数的更多信息，请参阅 [Pages Functions 文档](https://developers.cloudflare.com/pages/platform/functions/)。
 
 📚 阅读更多关于 [Astro 中的 SSR（服务端渲染）](/zh-cn/guides/server-side-rendering/) 的信息
 
