--- a/src/content/docs/en/recipes/build-forms.mdx
+++ b/src/content/docs/en/recipes/build-forms.mdx
@@ -76,7 +76,7 @@ In SSR mode, Astro pages can both display and handle forms. In this recipe, you'
     To write complex validation logic more easily, you can build your form using a [frontend framework](/en/core-concepts/framework-components/) and choose a form library like [React Hook Form](https://react-hook-form.com/) or [Felte](https://felte.dev/).
     :::
 
-4. Change the form's default data transfer `method` to `POST` to... or to avoid....(link this to what happens when submitting) The form submission will cause the browser to request the page again, with the form data stored in the [`Request` body](/en/reference/api-reference/#astrorequest).
+4. The form submission will cause the browser to request the page again. Change the form's data transfer `method` to `POST` to send the form data as part of the `Request` body, rather than as URL parameters.
 
     ```astro title="src/pages/register.astro" 'method="POST"'
     ---
