no typos under Yan's watch!
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/content/docs/en/recipes/build-forms-api.mdx
+++ b/src/content/docs/en/recipes/build-forms-api.mdx
@@ -133,7 +133,7 @@ This recipe shows you how to send form data to an API endpoint and handle that d
 
     </UIFrameworkTabs>
 
-  2. Create the `post` API endpoint that will recieve the form data. Use `request.formData()` to process it. Be sure to validate the form values before you use them. 
+  2. Create the `post` API endpoint that will receive the form data. Use `request.formData()` to process it. Be sure to validate the form values before you use them. 
   
         This example sends a JSON object with a message back to the client.
 
