--- a/src/content/docs/en/core-concepts/astro-components.mdx
+++ b/src/content/docs/en/core-concepts/astro-components.mdx
@@ -61,7 +61,7 @@ Below the component script, sits the component template. The component template 
 
 If you write plain HTML here, your component will render that HTML in any Astro page it is imported and used.
 
-However, [Astro's component template syntax](/en/core-concepts/astro-syntax/) also supports **JavaScript expressions**, **imported components** and [**special Astro directives**](/en/reference/directives-reference/). Data and values defined (during rendering) in the component script can be used in the component template to produce dynamically-created HTML.
+However, [Astro's component template syntax](/en/core-concepts/astro-syntax/) also supports **JavaScript expressions**, **imported components** and [**special Astro directives**](/en/reference/directives-reference/). Data and values defined in the component script can be used in the component template to produce dynamically-created HTML.
 
 ```astro title="src/components/MyFavoritePokemon.astro"
 ---
