start to update code samples

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -19,38 +19,35 @@ Assets are an _experimental_ Astro feature. Be mindful that the API is subject t
 
 ### Update Config
 
-To enable built-in asset support, you must add the following lines to your `astro.config.mjs` configuration file.
+To enable built-in asset support, add the following lines to your `astro.config.mjs` configuration file.
 
-```diff
- // astro.config.mjs
- import { defineConfig } from 'astro/config';
+```js title="astro.config.mjs" ins={4-6} 
+import { defineConfig } from 'astro/config';
 
- export default defineConfig({
-+ experimental: {
-+   assets: true
-+ }
- });
+export default defineConfig({
+ experimental: {
+  assets: true
+ }
+});
 ```
 
 ### If currently using `@astrojs/image`
 
-Built-in Assets support is intended to replace the `@astrojs/image` integration. 
-If you are currently using `@astrojs/image`, be sure to do the following steps.
+Built-in asset support is incompatible with the `@astrojs/image` integration. 
 
-#### Remove the image integration
+#### Remove the `@astro.js` integration
 
-Remove the `@astrojs/image` integration from your `package.json` `dependencies` and `astro.config.mjs` file.
+You must remove the integration from both your `package.json` dependencies and `astro.config.mjs` file.
 
-```diff
- // astro.config.mjs
- import { defineConfig } from 'astro/config';
-- import image from '@astrojs/image';
+```js title="astro.config.mjs" del={2,6}
+import { defineConfig } from 'astro/config';
+ import image from '@astrojs/image';
 
- export default defineConfig({
-   integrations: []
--    image()
-   ]
- });
+export default defineConfig({
+  integrations: []
+    image()
+  ]
+});
 ```
 
 #### Migrate any existing `<Image />` components
