intro enabling message

--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -19,6 +19,8 @@ Assets are an _experimental_ Astro feature. This API is subject to change before
 
 ## Enabling Assets in your Project
 
+Enabling assets may cause some breaking changes in your project. It may also require some manual changes to take advantage of new features. Please check every section below to avoid conflicts and get the most out of using the experimental assets option!
+
 ### Update Config
 
 To enable built-in asset support, add the following lines to your `astro.config.mjs` configuration file.
