--- a/src/content/docs/en/guides/assets.mdx
+++ b/src/content/docs/en/guides/assets.mdx
@@ -175,15 +175,16 @@ const blogCollection = defineCollection({
 The image metadata will be transformed to match the signature of imported images, and therefore can be passed directly to the `<Image />` component or the `getImage()` function.
 
 
-## Features
+## `astro:assets` module
 
 Enabling asset support allows you to access the `astro:assets` module. This module exposes the following features:
 
-- `Image` (see [Image Component](#image-component))
+- `Image`
+- `getImage()`
 
-### Image Component
+### `<Image />`
 
-The `<Image>` component generates an `<img>` tag with all the necessary attributes needed to display the image while avoiding Content Layout Shift **(CLS)**.
+The `<Image />` component generates an `<img>` tag with all the necessary attributes needed to display the image while avoiding Content Layout Shift **(CLS)**.
 
 :::tip[What is Content Layout Shift?]
 CLS is a score that reflects how much content shifted on your page during loading. The ideal number for CLS is as close to zero as possible, which the `Image` component enforces by automatically selecting the correct `width` and `height` for local images.
@@ -212,21 +213,21 @@ import myImage from "../assets/my_image.png"; // Image is 1600x900
 />
 ```
 
-### Properties
+#### Properties
 
-#### width and height
+##### width and height
 
 These properties are used to size the image while ensuring there will be no CLS. These properties are required for remote images. When using local images, the `width` and `height` can be automatically inferred from the source file.
 
-#### format
+##### format
 
 `format` is used to set the [image file type](https://developer.mozilla.org/en-US/docs/Web/Media/Formats/Image_types#common_image_file_types). This property is optional, but the default is `webp`.
 
-#### quality
+##### quality
 
 `quality` affects the image transformation quality. It can either be a preset from `low`, `medium`, `high`, `max` (automatically normalized between formats) or a number from `0` to `100` (interpreted differently between formats.) This property is optional.
 
-#### alt
+##### alt
 
 Not all users can see images in the same way, so accessibility is an especially important concern when using images. Use the `alt` attribute to provide [descriptive alt text](https://www.w3.org/WAI/tutorials/images/) for images.
 
@@ -234,7 +235,7 @@ This attribute is required for the `<Image />` component. This component will th
 
 If the image is merely decorative (i.e. doesn't contribute to the understanding of the page), set `alt=""` so that screen readers know to ignore the image.
 
-#### Additional properties
+##### Additional properties
 
 In addition to the properties listed previously, the Image component accepts all the properties accepted by the HTML `img` tag. You can use this, for example, to provide a `class` to the final `img` element.
 
@@ -260,9 +261,9 @@ import myImage from "../assets/my_image.png";
 />
 ```
 
-### JavaScript API
+### `getImage()`
 
-In addition to the component, a `getImage` function is provided. This function is intended for generating images destined to be used somewhere else than directly in HTML, such as for usage in CSS or in an [API Route](/en/core-concepts/endpoints/#server-endpoints-api-routes).
+In addition to the component, a `getImage()` function is provided. This function is intended for generating images destined to be used somewhere else than directly in HTML, such as for usage in CSS or in an [API Route](/en/core-concepts/endpoints/#server-endpoints-api-routes).
 
 This function takes the same parameters as the Image component, apart from `alt`.
 
